@@ -4,6 +4,7 @@ Collapsing Categories Changelog
     * fixed javascript bug where thisli.parentNode was null
     * made javascript more flexible so that all collapsing X plugins can share
       more code
+    * Now adds default options to database upon activation for use manually
 
 * 0.7.1 (2008/12/01)
     * fixed javascript bug in IE7
